# smartfeed

./: .gitignore  .isort.cfg  .pylintrc  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: build-and-publish.yaml  lint.yaml  pylint.yaml  tests.yaml
smartfeed/: manager.py  schemas.py
smartfeed/examples/: example_client.py
tests/: test_example_client_config.py  test_merger_append.py  test_merger_append_distribute.py  test_merger_percentage.py  test_merger_percentage_gradient.py  test_merger_positional.py  test_merger_view_session.py  test_merger_view_session_partial.py  test_parsing_config.py  test_redis_live.py  test_sub_feed.py
tests/fixtures/: configs.py  example_client_config.json  mergers.py  redis.py  subfeeds.py
