[tool.poetry]
name = "smartfeed"
version = "0.1.0"
description = ""
authors = ["Sultan Zakariya <sultik10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.7"
pylint-pydantic = "^0.1.8"
redis = ">=4.5.5,<7"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
pylint = "^2.17.4"
mypy = "^1.3.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
types-redis = "^4.5.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
